--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,27 @@ logging.level.com.example.azoov_backend=DEBUG
 spring.security.oauth2.client.registration.google.client-id=98848728342-fodfjqvp05lt9mjpbhup0hninriskjfn.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
+
+# Email Configuration (Gmail SMTP)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=220301120403@cutm.ac.in
+spring.mail.password=REPLACE_WITH_YOUR_APP_PASSWORD
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# ⚠️ IMPORTANT: Replace 'REPLACE_WITH_YOUR_APP_PASSWORD' above with your Gmail App Password
+# 
+# How to get Gmail App Password:
+# 1. Go to: https://myaccount.google.com/apppasswords
+# 2. Select: Mail → Other (Custom name)
+# 3. Enter name: "Azoov Business OS"
+# 4. Click: Generate
+# 5. Copy the 16-character password (remove all spaces!)
+# 6. Paste it above, replacing 'REPLACE_WITH_YOUR_APP_PASSWORD'
+# 7. Save this file
+# 8. Restart the backend
